test_data/neg/ss/655289/Windows/655289.acc_simp.rtf
>655289
MQYAFSFSFWADIEYPSFACSSVETLTYIPTFFGVFSSIKFMIIYPPFLETYVLFSG
EEMEBMBMBMBMBEMEEBEBEEMEEBEMBEMMMEEEEEMMBBBBMMEEMEMMMMMEE
